--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -66,13 +66,13 @@ jobs:
       - name: Deploy to n8n via cURL
         run: |
           set -e
-            
+              
           echo "Deploying dist.zip to ${{ steps.webhook.outputs.url }}..."
           response=$(curl -s -o response.log -w "%{http_code}" \
             -X POST ${{ steps.webhook.outputs.url }} \
             -H "Authorization: Bearer ${{ secrets.N8N_TOKEN }}" \
-            --data-binary @dist.zip)
-            
+            -F "file=@dist.zip")
+              
           if [[ "$response" -ne 200 ]]; then
             echo "❌ Deployment failed with HTTP $response"
             echo "Response body:"
