--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@chakra-ui/react": "^3.15.1",
     "@emotion/react": "^11.14.0",
+    "axios": "^1.8.4",
+    "mqtt": "^5.11.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
